初步框架搭建